...
                      Expanded(
                        child: Align(
                          alignment: Alignment.centerLeft,
                          child: SizedBox(
                            width: 250,
                            child: PopupMenuButton<String>(
                              key: const ValueKey('game-category-select'),
                              tooltip: 'Category',
                              initialValue: category,
                              clipBehavior: Clip.antiAlias,
                              position: PopupMenuPosition.over,
                              constraints: const BoxConstraints(minWidth: 250),
                              itemBuilder: (_) => [
...
