...
              Row(
                children: [
                  StreamBuilder<bool>(
                    stream: player.stream.playing,
                    initialData: player.state.playing,
                    builder: (_, value) => Pill(
                      value.data == true ? 'Pause' : 'Play',
                      iconOnly: true,
                      quiet: true,
                      height: 44,
                      icon: value.data == true ? Icons.pause : Icons.play_arrow,
                      onPressed: player.playOrPause,
                    ),
...
